Finsihed with the example CSS, started making modifications. Will finish over weekend.

--- a/main.css
+++ b/main.css
@@ -2,18 +2,19 @@
 body {
     font-size: 67.5%;
     font-family: Tahoma, Geneva, sans-serif;
-    background: #39150C url(img/hamster_bedding.png) no-repeat fixed top center;
+    /* background: #39150C url(img/hamster_bedding2.png) no-repeat fixed top center; */
     padding: 0;
     margin: 0;
     -webkit-background-size: 100% 100%;
     -moz-background-size: 100% 100%;
     background-size: 100% 100%;
     -o-background-size: 100% 100%;
+    background-color: lightblue;
 }
 
 h1 {
-    color: #2BA967;
-    font-size: 2.0em;
+    color: rgb(255, 0, 0);
+    font-size: 3.0em;
     margin: 0.5em 0 0.5em 0;
     padding: 0;
 }
@@ -71,17 +72,22 @@ hr {
     float: right;
 }
 
+div.clear { 
+    clear:both;
+    font-size: 1%;
+}
+
 /*Header*/
 header {
     padding: 2.5em 0 0.5em;
     margin: 0 0 2.0em;
-    background: #39150C url(img/hamster_header.jpg) center 0px;
+    background: #39150C url(img/hamster_header.png) center 0px;
 
 }
 
 header h1 {
     font-family: "Times New Roman", Times, serif;
-    color: #745b2f;
+    color: #ebca91;
     font-size: 7.5em;
     letter-spacing: -0.025em;
     margin: 0;    
@@ -92,7 +98,7 @@ header h1 {
 header h2 {
     font-weight: 300;
     font-size: 3.8em;
-    color: #2BA967;
+    color: rgb(61, 214, 220);
     margin: -0.4em 0 0 1.0em;
     text-transform: uppercase;
     letter-spacing: 0.05em;
@@ -124,13 +130,14 @@ nav li {
 
 nav li a, nav li a:visited {
     text-decoration: none;
-    color: #C64322;
+    color: rgb(61, 214, 220);
     padding: 0.3em 0.6em;
+    font-weight: bold;
 
 }
 
 nav li a:hover {
-    color: #C64322;
+    color: rgb(255, 0, 0);
     background-color: rgba(252,251,243,0.75);
 
 }
@@ -191,5 +198,107 @@ nav#utilityMenu ul li.acctNav::before, nav#utilityMenu ul li input#search::befor
 }
 
 /*Sidebar Section*/
+section#sidebar {
+    width: 238px;
+    float: right;
+    position: relative;
+    display: block;
+    background-color: #fff;
+    margin: 1.5em 0 3.0em 1.5em;
+    padding: 1.7em 0.5em 2.0em 1.7em;
+    border-left: #2BA967 solid 5px;
+
+}
+
 /*Main Section*/
+section #main {
+    /*background-color: #FCFBE6;*/
+    background-color: rgba(252,251,243,0.7);
+    margin: 0 0 2.0em;
+    padding: 1.5em  0 2.0em 1.5em;
+    display: inline-block;
+    border-radius: 2em;
+    box-shadow: 1px 1px 5px #777;/* offset-x | offset-y | blur-radius | color */
+
+}
+
+h1 span {
+    margin-left: 1em;
+
+}
+
+section div.panel{
+    float: left;
+    position: relative;
+    width: 250px;
+    margin: 0 0.5em 2.0em 0.5em;
+    padding: 1.0em;
+    background-color: #fff;
+    border: #ccc solid 1px;
+    border-radius: 0.6em;
+
+}
+
+section div.panel img.cheeseType {
+    width: 100%;
+
+}
+
 /*Footer*/
+footer {
+    background-color: #40362f;
+    height: 25px;
+    font-size: 1.2em;
+    color: #fff;
+    width: 100%;
+    text-align: center;
+    padding: 1.5em 2.0em;
+    
+}
+
+footer ul#menuFooter {
+    display: inline-block;
+    list-style: none;
+    margin: 0 0 0 0.6em;
+    padding: 0;
+
+}
+
+footer ul li {
+    display: inline-block;
+    padding: 0 0.7em 0 0;
+    margin: 0;
+
+}
+
+footer ul li::before {
+    content: "| ";
+    padding-right: 0.7em;
+
+}
+
+footer a, footer a:visited {
+    color: #fff;
+    text-decoration: none;
+
+}
+
+footer a:hover {
+    color: #fff;
+    text-decoration: underline;
+
+}
+
+button {
+    color: #C64322;
+    background-color: #FFF;
+    display: inline-block;
+    margin: 0 0.75em 0 0;
+    padding: 0.2em 0.5em;
+    border: 1px solid #C64322;
+    text-transform: uppercase;
+}
+button:hover {
+    background-color: #FBF3DB;
+    border: 1px solid #745b2f;
+}
